// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`performs hybrid navigations > context after navigation 1`] = `
{
  "adapter": {
    "onViewSwap": [Function],
    "resolveComponent": [Function],
    "updateRoutingConfiguration": [Function],
  },
  "hooks": {},
  "http": {
    "request": [Function],
  },
  "memo": {},
  "plugins": [],
  "responseErrorModals": undefined,
  "routing": undefined,
  "scrollRegions": [
    {
      "left": 0,
      "top": 0,
    },
    {
      "left": 0,
      "top": 0,
    },
  ],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "url": "https://bluebird.test/navigation",
  "validation": {},
  "version": "abc123",
  "view": {
    "component": "target.view",
    "deferred": {},
    "mergeable": [],
    "paginators": {},
    "properties": {
      "foo": "bar",
    },
  },
}
`;

exports[`performs hybrid navigations > navigation response 1`] = `
{
  "url": "https://bluebird.test/navigation",
  "validation": {},
  "version": "abc123",
  "view": {
    "component": "target.view",
    "deferred": {},
    "mergeable": [],
    "paginators": {},
    "properties": {
      "foo": "bar",
    },
  },
}
`;
